2009-08-20 [holger]	3.7.2cvs19

	* src/compose.c
	* src/compose.h
		Make it possible for code outside
		compose (e.g. plugins) to attach files

2009-08-20 [colin]	3.7.2cvs18

	* src/main.c
		Fix crash when accessing IMAP soon

2009-08-18 [colin]	3.7.2cvs17

	* src/ldapquery.c
		Maybe fix crash on non-existent LDAP server

2009-08-04 [colin]	3.7.2cvs16

	* src/toolbar.c
		Fix toolbar's spacing that breaks dark
		themes (patch from http://blogs.igalia.com/aperez/
		2009/07/making-claws-mail-look-better/)

2009-07-28 [colin]	3.7.2cvs15

	* src/account.c
	* src/addrcustomattr.c
	* src/addressadd.c
	* src/addressbook_foldersel.c
	* src/addrgather.c
	* src/browseldap.c
	* src/compose.c
	* src/editbook.c
	* src/editgroup.c
	* src/editjpilot.c
	* src/editldap.c
	* src/editldap_basedn.c
	* src/edittags.c
	* src/editvcard.c
	* src/exphtmldlg.c
	* src/expldifdlg.c
	* src/export.c
	* src/foldersel.c
	* src/import.c
	* src/importldif.c
	* src/importmutt.c
	* src/importpine.c
	* src/prefs_actions.c
	* src/prefs_customheader.c
	* src/prefs_display_header.c
	* src/prefs_filtering.c
	* src/prefs_folder_column.c
	* src/prefs_matcher.c
	* src/prefs_summary_column.c
	* src/prefs_summary_open.c
	* src/prefs_template.c
	* src/textview.c
	* src/uri_opener.c
		Fix bug 1950, 'Program freeze up during folder selection'
		Don't leave hidden windows modal

2009-07-28 [colin]	3.7.2cvs14

	* src/ldapquery.c
		Fix bug 1957, 'LDAP errs out after searching too 
		many search bases'

2009-07-28 [colin]	3.7.2cvs13

	* src/summaryview.c
		Fix bug 1966, '"Collapse all threads" slower than 
		"Expand all threads"'

2009-07-28 [colin]	3.7.2cvs12

	* src/common/session.c
		Fix bug 1967, 'Claws gets stuck after accepting 
		a certificate warning dialog'

2009-07-19 [paul]	3.7.2cvs11

	* manual/plugins.xml
		a few small changes to the English

2009-07-18 [mones]	3.7.2cvs10

	* manual/plugins.xml
		Add new bsfilter and fancy plugins to the docs
		and a note about dealing with plugins of the same class