@@ -3844,3 +3844,4 @@
 ( cvs diff -u -r 1.3.2.32 -r 1.3.2.33 src/ldapquery.c;  ) > 3.7.2cvs17.patchset
 ( cvs diff -u -r 1.115.2.221 -r 1.115.2.222 src/main.c;  ) > 3.7.2cvs18.patchset
 ( cvs diff -u -r 1.382.2.519 -r 1.382.2.520 src/compose.c;  cvs diff -u -r 1.50.2.54 -r 1.50.2.55 src/compose.h;  ) > 3.7.2cvs19.patchset
+( cvs diff -u -r 1.65.2.68 -r 1.65.2.69 src/codeconv.c;  cvs diff -u -r 1.15.2.22 -r 1.15.2.23 src/codeconv.h;  ) > 3.7.2cvs20.patchset
